--- a/NextVC-6way/Base.lproj/Main.storyboard
+++ b/NextVC-6way/Base.lproj/Main.storyboard
@@ -214,6 +214,7 @@
                         <outlet property="seventhTextField" destination="oRw-QL-Hkg" id="QB2-32-ce8"/>
                         <outlet property="sixthTextField" destination="QMu-RS-1rH" id="rKu-fz-uIm"/>
                         <outlet property="thirdTextField" destination="wST-64-ynz" id="4n6-c5-XaJ"/>
+                        <segue destination="qyp-2w-W16" kind="presentation" id="okc-yH-T9z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -233,7 +234,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qxa-56-rkp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="998" y="732"/>
+            <point key="canvasLocation" x="73" y="718"/>
         </scene>
         <!--Fifth View Controller-->
         <scene sceneID="plu-K3-iNm">
@@ -263,12 +264,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M0E-xz-KO8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1966" y="732"/>
+            <point key="canvasLocation" x="998" y="718"/>
         </scene>
         <!--Second View Controller-->
         <scene sceneID="hDC-r9-W3m">
             <objects>
-                <viewController id="oOY-bF-pdk" customClass="SecondViewController" customModule="NextVC_6way" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SecondVC" id="oOY-bF-pdk" customClass="SecondViewController" customModule="NextVC_6way" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="flC-zS-iQi">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -293,18 +294,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SsN-JJ-Htf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="999" y="-772"/>
+            <point key="canvasLocation" x="999" y="-773"/>
         </scene>
         <!--Third View Controller-->
         <scene sceneID="nID-ne-WCz">
             <objects>
                 <viewController id="qyp-2w-W16" customClass="ThirdViewController" customModule="NextVC_6way" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="IpY-aO-OOg">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v8f-vS-aVL">
-                                <rect key="frame" x="168.33333333333334" y="411.66666666666669" width="56.666666666666657" height="28.666666666666686"/>
+                                <rect key="frame" x="168.33333333333334" y="377.33333333333331" width="56.666666666666657" height="28.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -323,7 +324,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OXl-Ql-3Ym" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1966" y="-773"/>
+            <point key="canvasLocation" x="2024" y="-430"/>
         </scene>
         <!--Fourth View Controller-->
         <scene sceneID="Y24-rX-ShQ">
@@ -353,7 +354,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6aT-Sm-Q40" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1966" y="-35"/>
+            <point key="canvasLocation" x="2024" y="288"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="SKK-8t-zCp">
